# isogrid-houdini-sop

./: README.md
isogrid/applet/: CMakeLists.txt
isogrid/isogrid/: CMakeLists.txt
isogrid/isogrid/include/: WB_IsoGridCell.h  WB_IsoGridLine.h  WB_IsoGridSegment.h  WB_IsoHexGrid.h
isogrid/isogrid/src/: WB_IsoGridLine.cpp  WB_IsoGridSegment.cpp
isogrid/isosystem/: CMakeLists.txt
isogrid/isosystem/src/: iso_system.cpp  iso_system.h
